--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,14 @@
-.body {
-  background-image: url("css/image/soccer.jpg");
+body {
+  background-image: url("../css/image/soccer.jpg");
+  height: 100%;
 }
+
+#player-input{
+
+margin-top: 100px;
+
+  }
+
+  label{
+    color: white;
+  }
